ingress-gateway-nginx/example-to-test/05-example-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: example-ingress-nginx
  name: example-ingress-nginx
  namespace: ingress-test
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: example-ingress-nginx
